--- a/manifest.json
+++ b/manifest.json
@@ -17,24 +17,24 @@
     "gcm_user_visible_only": true,
     "icons": [
         {
-            "src": "https://b10700006.github.io/icon-a1.png",
-            "sizes": "192×192",
+            "src": "https://abs.twimg.com/responsive-web/client-web/icon-default.ee534d85.png",
+            "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "https://b10700006.github.io/icon-a2.png",
-            "sizes": "512×512",
-            "type": "image/png"
-        },
-        {
-            "purpose": "maskable",
-            "src": "https://b10700006.github.io/icon.png",
-            "sizes": "192×192",
+            "src": "https://abs.twimg.com/responsive-web/client-web/icon-default-large.8e027b65.png",
+            "sizes": "512x512",
             "type": "image/png"
         },
         {
             "purpose": "maskable",
-            "src": "https://b10700006.github.io/icon1.png",
+            "src": "https://abs.twimg.com/responsive-web/client-web/icon-default-maskable.2fd29c85.png",
+            "sizes": "192x192",
+            "type": "image/png"
+        },
+        {
+            "purpose": "maskable",
+            "src": "https://abs.twimg.com/responsive-web/client-web/icon-default-maskable-large.ee2b7aa5.png",
             "sizes": "512x512",
             "type": "image/png"
         }
