--- a/manifest.json
+++ b/manifest.json
@@ -84,7 +84,7 @@
     "shortcuts": [
         {
             "name": "探索",
-            "url": "https://www.yuntech.edu.tw/",
+            "url": "https://www.yuntech.edu.tw/?utm_source=homescreen&utm_medium=shortcut",
             "icons": [
                 {
                     "src": "https://abs.twimg.com/responsive-web/client-web/icon-search-stroke.5f9aa885.png",
