--- a/manifest.json
+++ b/manifest.json
@@ -17,26 +17,9 @@
     "gcm_user_visible_only": true,
     "icons": [
         {
-            "src": "https://abs.twimg.com/responsive-web/client-web/icon-default.ee534d85.png",
-            "sizes": "192x192",
-            "type": "image/png"
-        },
-        {
-            "src": "https://abs.twimg.com/responsive-web/client-web/icon-default-large.8e027b65.png",
-            "sizes": "512x512",
-            "type": "image/png"
-        },
-        {
-            "purpose": "maskable",
-            "src": "https://abs.twimg.com/responsive-web/client-web/icon-default-maskable.2fd29c85.png",
-            "sizes": "192x192",
-            "type": "image/png"
-        },
-        {
-            "purpose": "maskable",
-            "src": "https://abs.twimg.com/responsive-web/client-web/icon-default-maskable-large.ee2b7aa5.png",
-            "sizes": "512x512",
-            "type": "image/png"
+            "src": "/icon.png",
+			"sizes": "48x48 72x72 96x96 128x128 192x192 256x256 512x512",
+			"type": "image/png"
         }
     ],
     "manifest_version": 729,
@@ -81,19 +64,6 @@
             ]
         }
     },
-    "shortcuts": [
-        {
-            "name": "探索",
-            "url": "https://www.yuntech.edu.tw/?utm_source=homescreen&utm_medium=shortcut",
-            "icons": [
-                {
-                    "src": "https://abs.twimg.com/responsive-web/client-web/icon-search-stroke.5f9aa885.png",
-                    "type": "image/png",
-                    "sizes": "192x192"
-                }
-            ]
-        }
-    ],
     "short_name": "Web BLE",
     "start_url": "https://b10700006.github.io/?utm_source=homescreen&utm_medium=shortcut",
     "theme_color": "#536878",
