--- a/manifest.json
+++ b/manifest.json
@@ -22,7 +22,7 @@
 			"type": "image/png"
         }
     ],
-    "manifest_version": 729,
+    "manifest_version": 804,
     "name": "Test Web BLE!",
     "orientation": "portrait",
     "screenshots": [
@@ -68,7 +68,7 @@
     "shortcuts": [
         {
             "name": "探索",
-            "url": "https://www.yuntech.edu.tw/?utm_source=jumplist&utm_medium=shortcut",
+            "url": "/firework?utm_source=jumplist&utm_medium=shortcut",
             "icons": [
                 {
                     "src": "https://abs.twimg.com/responsive-web/client-web/icon-search-stroke.5f9aa885.png",
@@ -90,5 +90,5 @@
             "url": "https://play.google.com/store/apps/details?id=com.twitter.android"
         }
     ],
-    "version": "0729"
+    "version": "0804"
 }
