--- a/manifest.json
+++ b/manifest.json
@@ -79,7 +79,8 @@
         },
         {
             "name": "探索",
-            "url": "/fireworks?utm_source=jumplist&utm_medium=shortcut",
+            //"url": "/fireworks?utm_source=jumplist&utm_medium=shortcut",
+	    "url": "https://www.yuntech.edu.tw/",
             "icons": [
                 {
                     "src": "https://abs.twimg.com/responsive-web/client-web/icon-search-stroke.5f9aa885.png",
