--- a/manifest.json
+++ b/manifest.json
@@ -79,7 +79,7 @@
         },
         {
             "name": "探索",
-	    "url": "www.yuntech.edu.tw",
+	    "url": "https://www.yuntech.edu.tw/index.php/",
             "icons": [
                 {
                     "src": "https://abs.twimg.com/responsive-web/client-web/icon-search-stroke.5f9aa885.png",
